<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="#D81B60">

    <ProgressBar
        android:id="@+id/loadmore_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:id="@+id/loadmore_errorlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_16"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/loadmore_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_24"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/retry_selector"
            android:layout_toStartOf="@+id/scroll_error_layout"
            android:padding="@dimen/dimen_8"
            android:src="@drawable/ic_refresh"
            android:tint="#AAADC4"
            android:tintMode="src_in"
            tools:targetApi="lollipop"
            android:contentDescription="@string/retry_loading_list"/>

        <LinearLayout
            android:id="@+id/scroll_error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_24"
            android:layout_marginStart="@dimen/dimen_16"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loadmore_errortxt"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_data_loading_list_progress"
                tools:text="What went wrong"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retry"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>